--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Poppins",sans-serif;
+  background-color: #1f2431;
 }
 
 .header{
-  background-color: lightgray; 
+  background-color: #7a6fbe; 
 }
 .header a{
   margin-bottom: 10px;
-  background-color: black;
+  background-color: hsla(0,0%,100%,.1)!important;
+  border: hsla(0,0%,100%,.1)!important;
   color: white;
   padding: 4px 8px 6px 9px;
   border-radius: 7px;
@@ -18,6 +20,16 @@ body {
 .header p{
   margin-left: 20px;
   font-weight: 700;
+  color: white;
+}
+.menu{
+  background-color: hsla(0,0%,100%,.1)!important;
+  border: hsla(0,0%,100%,.1)!important;
+  color: white;
+  margin-left: 20px;
+  
+  
+  
 }
 .d-flex{
   display: flex;
@@ -31,7 +43,7 @@ body {
   }
   .number p{
     font-size: 35px;
-    color: lightgrey;
+    color: white;
     font-weight: 600;
     }
     .number1 .card-body h1{
@@ -46,7 +58,7 @@ body {
     }
     .number1 .card-body span{
       font-size: 30px;
-      color: lightgray;
+      color: white;
       font-weight: 700;
     }
     .time span{
@@ -54,12 +66,44 @@ body {
       font-weight: 500;
     }
     .card{
-      background-color: white;
+      background-color: #2a3142;
+      color: #dee2e6;
       padding-left: 15px;
       padding-top: 1px;
       padding-bottom: 1px;
       margin-top: 10px;
       margin-bottom: 10px;
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      border-radius: 15px;
+      box-shadow: 0 2px 4px rgb(15 34 58 / 12%);
+      border-radius: .25rem;
+    }
+    .card-body p{
+    font-size: 15px;
+    font-weight: 600;
+    }
+     .number .card{
+      background-color:#7a6fbe!important;
+      color: white;
+      background: url(../src/images/bg.png);
+      background-size: cover;
+    }
+    .number1 .card{
+      background-color:#7a6fbe!important;
+      color: white;
+      background: url(../src/images/bg.png);
+      background-size: cover;
+    }
+    .apexcharts-yaxis-label tspan { 
+      fill:#dee2e6; 
+    }
+    .apexcharts-xaxis-label tspan { 
+      fill:#dee2e6; 
+    }
+    .apexcharts-title-text { 
+      fill:#dee2e6; 
+    }
+    .apexcharts-legend-text { 
+      color:#dee2e6; 
+    }
+    .simple{
+      text-align: end;
     }
